Eemaldasime Expressi ja lülitasime ümber Vercel API route'ile

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "leaflet": "^1.9.4",
+    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
