--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-postgresql://kinnisvara_owner:npg_4AaDnzj9JMgZ@ep-odd-recipe-a2kwvya3-pooler.eu-central-1.aws.neon.tech/kinnisvara?sslmode=require
+DATABASE_URL=postgres://kinnisvara_owner:npg_4AaDnzj9JMgZ@ep-odd-recipe-a2kwvya3-pooler.eu-central-1.aws.neon.tech/kinnisvara?sslmode=require
