--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "leaflet": "^1.9.4",
     "pg": "^8.15.6",
     "react": "^19.0.0",
