--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
+    "framer-motion": "^12.10.4",
     "leaflet": "^1.9.4",
     "pg": "^8.15.6",
     "react": "^19.0.0",
