--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.10.4",
