--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@turf/turf": "^7.2.0",
+    "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "@vercel/postgres": "^0.10.0",
     "csv-parse": "^5.5.3",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
     "exceljs": "^4.4.0",
+    "express": "^4.18.2",
     "framer-motion": "^12.10.4",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -46,9 +48,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "nodemon": "^3.0.3",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^6.3.1",
-    "nodemon": "^3.0.3"
+    "vite": "^6.3.1"
   }
 }
