Remove .env from repository

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,28 @@ dist-ssr
 *.sln
 *.sw?
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env*.local
+
+# Vercel
 .vercel
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Build output
+.next
+out
+build
+
+# Cache
+.cache
+.npm
+.eslintcache
