--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@headlessui/react": "^2.2.4",
     "@turf/turf": "^7.2.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
